# DistributionVideoTranscoding

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FFmpegProperty.cmake  GTestProperty.cmake  GlobalProperty.cmake
include/libvideo/: ByteBuffer.hpp  Codec.hpp  CodecID.hpp  CodecManager.hpp  CodecParameter.hpp  DecodeCodec.hpp  Decoder.hpp  EncodeCodec.hpp  EncodedFrame.hpp  Encoder.hpp  Error.hpp  ErrorDefine.hpp  Rational.hpp  RawFrame.hpp  StreamIndex.hpp  Type.hpp  Video.hpp  VideoCodec.hpp  VideoCodecID.hpp  VideoCodecManager.hpp  VideoCodecParameter.hpp  VideoEncodedFrame.hpp  VideoError.hpp  VideoErrorDefine.hpp  VideoReader.hpp  VideoStreamIndex.hpp  VideoType.hpp
src/: CMakeLists.txt
src/libvideo/: ByteBuffer.cpp  CMakeLists.txt  Codec.cpp  CodecID.cpp  CodecManager.cpp  CodecParameter.cpp  DecodeCodec.cpp  Decoder.cpp  EncodeCodec.cpp  EncodedFrame.cpp  Encoder.cpp  Error.cpp  Rational.cpp  RawFrame.cpp  StreamIndex.cpp  Video.cpp  VideoCodec.cpp  VideoCodecID.cpp  VideoCodecManager.cpp  VideoEncodedFrame.cpp  VideoError.cpp  VideoReader.cpp  VideoStreamIndex.cpp
test/: CMakeLists.txt
test/libvideo/: ByteBuffer_TEST.cpp  CMakeLists.txt  Video_TEST.cpp  main.cpp
