cmake_minimum_required (VERSION 3.6)

project (TRANSCODING_SERVER_PROJECT)
set (PROJECT_VERSION_MAJOR 0)
set (PROJECT_VERSION_MINOR 0)

set (CMAKE_BUILD_TYPE Debug)
set_property(GLOBAL PROPERTY GLOBAL_CPP_VERSION 14)
set_property(GLOBAL PROPERTY TRANSCODING_SERVER_PROJECT_INCLUDE_DIR    ${TRANSCODING_SERVER_PROJECT_SOURCE_DIR}/include)
set_property(GLOBAL PROPERTY TRANSCODING_SERVER_PROJECT_LIBRARY_DIR    ${TRANSCODING_SERVER_PROJECT_SOURCE_DIR}/lib)
set_property(GLOBAL PROPERTY TRANSCODING_SERVER_PROJECT_THIRDPARTY_DIR ${TRANSCODING_SERVER_PROJECT_SOURCE_DIR}/thirdparty)

add_subdirectory(src)
add_subdirectory(test)